--- a/index.html
+++ b/index.html
@@ -1,96 +1,11 @@
 <html>
 <body>
 <style>
-.time {
-  font-size: 100px;
-}
-body>div{
-  display: box;
-  height: 50%;
-  min-height: 160px;
-  min-width: 320px;
-  min-width: 100%;
-  text-align: center;
-}
-#p1 {
-  background: pink;
-  -webkit-transform: rotate(180deg);
-}
-#p2 { 
-  background: lightblue;
-}
-.lost {
-  background: red;
-}
+
 </style>
-<div id="p1"><span class="time"></span></div>
-<div id="p2"><span class="time"></span></div>
-<script>
-"use strict";
-(function(d, w){
 
-var
-  interval,
-  lastcall,
-  DEFAULT_TIME=300000,
-  e = {
-    p1: d.querySelector("#p1")
-   ,p2: d.querySelector("#p2")
-  },
-  s0 = {
-      p1: {
-        time: DEFAULT_TIME,
-        other: "p2"
-      },
-      p2: {
-        time: DEFAULT_TIME,
-        other: "p1"
-      },
-      currentPlayer: "p1"
-  },
-  s =  w.localStorage.s && w.JSON.parse(w.localStorage.s) || s0,
-  format_time = function(t){ // t in milliseconds
-    var
-    hours = 0|(t / 3600000),
-    minutes = 0|(t % 3600000 / 60000),
-    seconds = t % 60000 / 1000;
-  
-    return [
-      hours,
-      /\d\d$/.exec("00" + minutes),
-      /\d\d\.\d/.exec("00" + (seconds).toFixed(1))
-    ].slice(+!hours).join(":");
-  },
-  click_event = ("ontouchstart" in d) ? "touchstart" : "click",
-  click_listener = function(e){
-    if(s.currentPlayer === this.id){
-      s.currentPlayer = s[s.currentPlayer].other;
-    }
-  },
-  tick = function(){
-    var now = +new w.Date;
-    if(lastcall){
-      s[s.currentPlayer].time = Math.max(
-        0,
-        s[s.currentPlayer].time - (now - lastcall));
-    }
-    lastcall = now;
-    e.p1.querySelector(".time").innerHTML = format_time(s.p1.time); 
-    e.p2.querySelector(".time").innerHTML = format_time(s.p2.time); 
-  
-    if(s[s.currentPlayer].time <= 0){ // currentPlayer lost
-      clearInterval(interval);
-      alert(s.currentPlayer + " lost");
-    }
-  },
-  interval = setInterval(tick, 100);
-; // end var
+<h1>Artur Honzawa</h1>
 
-[e.p1, e.p2].forEach(function(el){
-  el.addEventListener(click_event, click_listener, false);
-});
 
-})(document, window);
-</script>
 </body>
 </html>
