moved gameclock to its own file

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <body>
 <style>
@@ -6,6 +7,10 @@
 
 <h1>Artur Honzawa</h1>
 
+<h2>Single page apps:</h2>
 
+<ul>
+  <li href="<img src="http://arturh.github.com/gameclockjs">gameclockjs: <img src="http://qrcode.kaywa.com/img.php?s=8&d=http%3A%2F%2Fis.gd%2Fgameclockjs" alt="qrcode"  /></li>
+</ul>
 </body>
 </html>
