moved gameclock to its own file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <h2>Single page apps:</h2>
 
 <ul>
-  <li href="<img src="http://arturh.github.com/gameclockjs">gameclockjs: <img src="http://qrcode.kaywa.com/img.php?s=8&d=http%3A%2F%2Fis.gd%2Fgameclockjs" alt="qrcode"  /></li>
+  <li href="http://arturh.github.com/gameclockjs"
+      >gameclockjs:<img src="http://qrcode.kaywa.com/img.php?s=8&d=http%3A%2F%2Fis.gd%2Fgameclockjs"
+                        alt="qrcode"  />
+  </li>
 </ul>
 </body>
 </html>
