added gameclock in an iframe

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <ul>
   <li><a href="http://arturh.github.com/gameclockjs"
-      >gameclockjs:<img src="http://qrcode.kaywa.com/img.php?s=5&d=http%3A%2F%2Fis.gd%2Fgameclockjs"
-                        alt="qrcode"  />
+      >gameclockjs:<iframe src="http://qrcode.kaywa.com/img.php?s=5&d=http%3A%2F%2Fis.gd%2Fgameclockjs"
+                           width="320"
+                           height="480" />
   </a></li>
 </ul>
 </body>
