--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <ul>
   <li><a href="http://arturh.github.com/gameclockjs"
-      >gameclockjs:<iframe src="http://qrcode.kaywa.com/img.php?s=5&d=http%3A%2F%2Fis.gd%2Fgameclockjs"
+      >gameclockjs:<iframe src="http://arturh.github.com/gameclockjs"
                            width="320"
                            height="480" />
   </a></li>
