--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
   <li><a href="http://arturh.github.com/gameclockjs"
       >gameclockjs:<iframe src="http://arturh.github.com/gameclockjs"
                            width="320"
-                           height="480" />
+                           height="480"i
+      /><img src="http://qrcode.kaywa.com/img.php?s=5&d=http%3A%2F%2Fis.gd%2Fgameclockjs"
+             alt="qrcode" />
+
   </a></li>
 </ul>
 </body>
