--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <ul>
   <li><a href="http://arturh.github.com/gameclockjs"
       >gameclockjs:<iframe src="http://arturh.github.com/gameclockjs"
-                           width="320"
-                           height="480"i
+                           width="400"
+                           height="480"
       /><img src="http://qrcode.kaywa.com/img.php?s=5&d=http%3A%2F%2Fis.gd%2Fgameclockjs"
              alt="qrcode" />
 
