added gameclock in an iframe

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       >gameclockjs:<iframe src="http://arturh.github.com/gameclockjs"
                            width="400"
                            height="480"
-      /><img src="http://qrcode.kaywa.com/img.php?s=5&d=http%3A%2F%2Fis.gd%2Fgameclockjs"
-             alt="qrcode" />
+                   ></iframe
+                    ><img src="http://qrcode.kaywa.com/img.php?s=5&d=http%3A%2F%2Fis.gd%2Fgameclockjs"
+                          alt="qrcode" />
 
   </a></li>
 </ul>
