--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 <h2>Single page apps:</h2>
 
 <ul>
-  <li><a href="http://arturh.github.com/gameclockjs"
-      >gameclockjs:<iframe src="http://arturh.github.com/gameclockjs"
+  <li>gameclockjs:<iframe src="http://arturh.github.com/gameclockjs"
                            width="400"
                            height="480"
                    ></iframe
                     ><img src="http://qrcode.kaywa.com/img.php?s=5&d=http%3A%2F%2Fis.gd%2Fgameclockjs"
                           alt="qrcode" />
 
-  </a></li>
+  </li>
 </ul>
 </body>
 </html>
