--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		
 		<link rel="stylesheet" href="style.css" />
 		
+    <script src="http://ajax.cdnjs.com/ajax/libs/modernizr/1.7/modernizr-1.7.min.js"></script>
 		<!--[if IE 6]>
         <script src="js/ie6-transparency.js"></script>
         <script>
