--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 					
 					<div id="contact-details">										
 						<p class="contact"><span>Email: </span>arturh@gmail.com</p>
-            <p class="contact"><span>Website: </span><a href="http://twitter.com/_arturh">twitter.com/_arturh</a></p>
+            <p class="contact"><span>Twitter: </span><a href="http://twitter.com/_arturh">twitter.com/_arturh</a></p>
+            <p class="contact"><span>Github: </span ><a href="http://github.com/arturh"  >github.com/arturh</a></p>
 						<p class="contact"><span>Phone: </span>+34 666 134 212</p>
 					</div>	
 									
