--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
 					
 					<div id="contact-details">										
-						<p class="contact"><span>Email: </span>arturh@gmail.com</p>
+            <p class="contact"><span>Email: </span><a href="mailto:arturh+github@gmail.com">arturh@gmail.com</a></p>
             <p class="contact"><span>Twitter: </span><a href="http://twitter.com/_arturh">twitter.com/_arturh</a></p>
             <p class="contact"><span>Github: </span ><a href="http://github.com/arturh"  >github.com/arturh</a></p>
 						<p class="contact"><span>Phone: </span>+34 666 134 212</p>
