--- a/index.html
+++ b/index.html
@@ -152,5 +152,8 @@
 	
 		</div><!--end wrap-->
 		<div id="spacing"></div><!--hack for ie6 and ie7-->	
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery.js">\x3C/script>')</script>
 	</body>	
 </html>
