--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p class="contact"><span>Email: </span><a href="mailto:arturh+github@gmail.com">arturh@gmail.com</a></p>
             <p class="contact"><span>Twitter: </span><a href="http://twitter.com/_arturh">twitter.com/_arturh</a></p>
             <p class="contact"><span>Github: </span ><a href="http://github.com/arturh"  >github.com/arturh</a></p>
-						<p class="contact"><span>Phone: </span>+34 666 134 212</p>
+              <p class="contact"><span>Phone: </span><a href="tel:+34666134212">+34 666 134 212</a></p>
 					</div>	
 									
 				</div><!--end header-content-->
