--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
   }
 
   function addClass(result){
-    docElement.className = result;
+    docElement.className += ' ' + result;
   }
 
   ruby.removeChild(rp);
