Changed kanji to proper

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div id="header-content">                    
                     
                   <h1>Artur <ruby>Hon<rt >本</rt
-                                 >zawa<rt>沢</rt></h1>
+                                 >zawa<rt>澤</rt></h1>
                     <h2>Software Gardener</h2>
                 
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
