--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
                     
                     <div id="contact-details">                                        
-            <p class="contact"><span>Email: </span><a   rel="me" href="mailto:arturh+github@gmail.com">arturh@gmail.com</a></p>
+            <p class="contact"><span>Email: </span><a   rel="me" href="mailto:arturh%25github@gmail.com">arturh@gmail.com</a></p>
             <p class="contact"><span>Twitter: </span><a rel="me" href="http://twitter.com/_arturh"    >@_arturh</a></p>
             <p class="contact"><span>Github: </span ><a rel="me" href="http://github.com/arturh"      >github.com/arturh</a></p>
               <p class="contact"><span>Phone: </span><a rel="me" href="tel:+34666134212"              >+34 666 134 212</a></p>
