--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 (function(){
   var tops = $("rt").toArray().map(function(el){return $(el).offset().top; });
   alert(tops);
-  if(tops[0] !=== tops[tops.length]){
+  if(tops[0] !== tops[tops.length]){
     $("rt").hide();
   }
 })();
