remove instead of hide ruby

--- a/index.html
+++ b/index.html
@@ -219,9 +219,8 @@
 })();
 (function(){
   var tops = $("rt").toArray().map(function(el){return $(el).offset().top; });
-  alert(tops);
   if(tops[0] !== tops[tops.length]){
-    $("rt").hide();
+    $("rt").remove();
   }
 })();
 </script>
