closing ruby tag

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <h1><ruby>Ar<rt  >アー</rt
                            >tur<rt >サー</rt
                            >&nbsp;Hon<rt >本</rt
-                           >zawa<rt>澤</rt></h1>
+                           >zawa<rt>澤</rt></ruby></h1>
                     <h2>Software Gardener</h2>
                 
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
@@ -219,6 +219,7 @@
 })();
 (function(){
   var tops = $("rt").toArray().map(function(el){return $(el).offset().top; });
+  !!window.console && console.log("tops", tops);
   if(tops[0] !== tops[tops.length]){
     $("rt").remove();
   }
