fixed mailto url

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     
                     <div id="contact-details">                                        
             <p class="contact"><span class="symbol">&#x2706; </span><span>phone   </span><a rel="me" href="tel:+34666134212"                >+34 666 134 212</a></p>
-            <p class="contact"><span class="symbol">&#x2709; </span><span>e-mail  </span><a rel="me" href="mailto:arturh%25github@gmail.com">arturh@gmail.com</a></p>
+            <p class="contact"><span class="symbol">&#x2709; </span><span>e-mail  </span><a rel="me" href="mailto:arturh@gmail.com">arturh@gmail.com</a></p>
             <p class="contact"><span class="symbol">&#x270D; </span><span>twitter </span><a rel="me" href="http://twitter.com/_arturh"      >@_arturh</a></p>
             <p class="contact"><span class="symbol">&beta;   </span><span>github  </span><a rel="me" href="http://github.com/arturh"        >github.com/arturh</a></p>
                     </div>    
