--- a/squaredj/index.html
+++ b/squaredj/index.html
@@ -11,7 +11,7 @@
 "use strict";
 var FSQUARE_CLIENT_ID="NMZKOEEJZTJOAORQ4GXZZW5GUMBUDGSTYZH3BZKGNV0INLUV";
 
-$.Marelle( FSQUARE_CLIENT_ID )
+$.Marelle( "NMZKOEEJZTJOAORQ4GXZZW5GUMBUDGSTYZH3BZKGNV0INLUV" )
 .done( function( M ){
 
   console.log("done");
