--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
   <link rel="stylesheet" href="css/style.css">
 
-  <!-- All JavaScript at the bottom, except this Modernizr build.
+    <script src="https://d3eoax9i5htok0.cloudfront.net/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+<!-- All JavaScript at the bottom, except this Modernizr build.
      Modernizr enables HTML5 elements & feature detects for optimal performance.
      Create your own custom Modernizr build: www.modernizr.com/download/ -->
 <script src="js/libs/modernizr-2.5.3.min.js"></script>
@@ -68,7 +69,7 @@
 </tr>
 </tbody>
 </table>
-<p><math display="block" xmlns="http://www.w3.org/1998/Math/MathML"><mrow><msup><mi>e</mi><mrow><mi>i</mi><mi>π</mi></mrow></msup><mo>+</mo><mn>1</mn><mo>=</mo><mn>0</mn></mrow></math></p>
+<p>\[e^{i\pi}+1=0\]</p>
 
 
   <!-- JavaScript at the bottom for fast page loading -->
