--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </tr>
 </tbody>
 </table>
-<p>\[e^{i\pi}+1=0\]</p>
+<p>\[e^{i\tau}=1\]</p>
 
 
   <!-- JavaScript at the bottom for fast page loading -->
