--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="resume.css" type="text/css" />
 </head>
 <body>
-<div id='container'><div id='contact'><p>
-</p><p></p><p>
+<div id='container'><div id='contact'><p></p><p>
 <script type="text/javascript">
 <!--
 h='&#x67;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;';a='&#64;';n='&#x61;&#114;&#116;&#x75;&#114;&#104;';e=n+a+h;
@@ -34,7 +33,7 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+'<code>'+e+'</code>'+'<\/'+
 <ul>
 <li>Started as only Android developer, further developing existing projects as well as starting new ones from scratch</li>
 <li>Introduced Git use and workflows at the company</li>
-<li>Currently, lead Android developer and resposible for training new hires, iOS team tech assesment, new API design and customer communication</li>
+<li>Currently, lead Android developer and resposible for training new hires, iOS team tech assesment, API design and customer communication</li>
 <li>First app developed for <a href="https://wuaki.tv/pages/android">Wuaki.tv</a>, a Spanish video-on-demand service</li>
 </ul></li>
 <li><p><strong><a href="http://www.bmat.com/">Barcelona Music &amp; Audio Technologies</a></strong></p>
