--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+'<code>'+e+'</code>'+'<\/'+
 <li><p><strong><a href="http://www.wondarlab.com/">Wondarlab SL</a></strong></p>
 <p>Mobile Developer, March 2012 - present</p>
 <ul>
-<li>Started as only Android developer, further developing existing projects as well as starting new ones from scratch</li>
+<li>Started as only Android developer, further developing existing projects as well as starting new ones from scratch. Mostly tablet apps.</li>
 <li>Introduced Git use and workflows in the company</li>
-<li>Currently, lead Android developer and responsible for training new hires, iOS team tech assesment, API design and customer communication</li>
-<li>First app developed for <a href="https://wuaki.tv/pages/android">Wuaki.tv</a>, a Spanish video-on-demand service</li>
+<li>Currently, lead Android developer and responsible for new hires, iOS team tech assesment, API design and customer communication</li>
+<li>First app developed: <a href="https://wuaki.tv/pages/android">Wuaki.tv</a>, a Spanish video-on-demand service</li>
 </ul></li>
 <li><p><strong><a href="http://www.bmat.com/">Barcelona Music &amp; Audio Technologies</a></strong></p>
 <p>Software Engineer, April 2008 - June 2011</p>
